--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <h1 style = "font-size: 300%"> Здесь будет что-то про бани </h1>
 <h1> Тестирую гит </h1>
 <h1> Гит настроился, ура </h1>
+<h1> Проверяю гит с домашнего компа </h1>
