--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
-<h1 style = "font-size: 300%"> Здесь будет что-то про бани </h1>
-<h1> Тестирую гит </h1>
-<h1> Гит настроился, ура </h1>
-<h1> Проверяю гит с домашнего компа </h1>
+<html>
+    <head>
+        <link rel="stylesheet" href="styles.css">
+        <script src="script.js"></script>
+    </head>
+    <body>
+        <h1 class="test_style">Здесь будет что-то про бани</h1>
+    </body>
+</html>
