--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
     </head>
     <body>
         <h1 class="test_style">Здесь будет что-то про бани</h1>
+        <img src = "img/testImage.jpg"></img>
     </body>
 </html>
