--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
         <script src="script.js"></script>
     </head>
     <body>
-        <h1 class="test_style">Здесь будет что-то про бани</h1>
-        <img src = "img/testImage.jpg"></img>
+        <img src="img/testImage.jpg" width="100%" height="100%"></img>
+        <div class="main_menu">
+            <span class="menu_item">Галерея</span>
+            <span class="menu_item">Цены</span>
+            <span class="menu_item">Режим работы</span>
+            <span class="menu_item">Общественная баня</span>
+        </div>
     </body>
 </html>
