--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <script src="script.js"></script>
     </head>
     <body>
-        <img src="img/testImage.jpg" width="100%" height="100%"></img>
+        <img src="img/testImage.jpg" width="100%"></img>
         <div class="main_menu">
             <span class="menu_item">Галерея</span>
             <span class="menu_item">Цены</span>
