--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
         <script src="script.js"></script>
     </head>
     <body>
-        <img src="img/testImage.jpg" width="100%"></img>
-        <div class="main_menu">
-            <span class="menu_item">Галерея</span>
-            <span class="menu_item">Цены</span>
-            <span class="menu_item">Режим работы</span>
-            <span class="menu_item">Общественная баня</span>
+        <div class="header-image">
+            <img src="img/testImage.jpg" width="100%"></img>
+            <div class="header-text"> Берлога </div>
+        </div>
+        <div class="main-menu">
+            <span class="menu-item">Галерея</span>
+            <span class="menu-item">Цены</span>
+            <span class="menu-item">Режим работы</span>
+            <span class="menu-item">Общественная баня</span>
         </div>
     </body>
 </html>
