--- a/index.html
+++ b/index.html
@@ -5,14 +5,22 @@
     </head>
     <body>
         <div class="header-image">
+            <img class="header-logo" src="img/berloga_logo.png"></img>
             <img src="img/testImage.jpg" width="100%"></img>
-            <div class="header-text"> Берлога </div>
+            
         </div>
         <div class="main-menu">
+            <span class="menu-item">Акции</span>
+            <span class="menu-item">Общественная баня</span>
+            <span class="menu-item">Семейный номер</span>
+            <span class="menu-item">Меню</span>
             <span class="menu-item">Галерея</span>
             <span class="menu-item">Цены</span>
             <span class="menu-item">Режим работы</span>
-            <span class="menu-item">Общественная баня</span>
+            <span class="menu-item">Правила посещения</span>
+            <span class="menu-item">Контакты</span>
+            <span class="menu-item">Вакансии</span>
+            <span class="menu-item">Франшиза</span>
         </div>
     </body>
 </html>
