--- a/index.html
+++ b/index.html
@@ -10,17 +10,23 @@
             
         </div>
         <div class="main-menu">
-            <span class="menu-item">Акции</span>
             <span class="menu-item">Общественная баня</span>
             <span class="menu-item">Семейный номер</span>
             <span class="menu-item">Меню</span>
-            <span class="menu-item">Галерея</span>
             <span class="menu-item">Цены</span>
             <span class="menu-item">Режим работы</span>
             <span class="menu-item">Правила посещения</span>
             <span class="menu-item">Контакты</span>
             <span class="menu-item">Вакансии</span>
             <span class="menu-item">Франшиза</span>
+        </div>
+        <div class="main-table">
+            <div class="top-row h1-text">Общественная баня</div>
+            <div class="left-col content-text">Общее отделение банного комплекса Берлога рассчитано на одновременное посещение пятидесяти человек. Каждому клиенту предоставляется отдельный шкафчик с электронным замком, номер на шкафчике соответствует посадочному месту. В моечном отделении находится бассейн размерами 3*6 метра температура воды 28 градусов. Русская парная рассчитанная на 20 человек. Турецкий хамам в котором могут комфортно расположиться 10 человек. Для любителей экстрима есть купель с температурой воды 12 градусов. Для клиентов бани работает кухня.</div>
+            <div class="right-col"><img src="img/Image1.jpg" width="80%"><img></div>
+        </div>
+        <div class="footer">
+            <p style="text-align:center;">Все права защищены и всё такое</p>
         </div>
     </body>
 </html>
