--- a/index.html
+++ b/index.html
@@ -23,7 +23,13 @@
         <div class="main-table">
             <div class="top-row h1-text">Общественная баня</div>
             <div class="left-col content-text">Общее отделение банного комплекса Берлога рассчитано на одновременное посещение пятидесяти человек. Каждому клиенту предоставляется отдельный шкафчик с электронным замком, номер на шкафчике соответствует посадочному месту. В моечном отделении находится бассейн размерами 3*6 метра температура воды 28 градусов. Русская парная рассчитанная на 20 человек. Турецкий хамам в котором могут комфортно расположиться 10 человек. Для любителей экстрима есть купель с температурой воды 12 градусов. Для клиентов бани работает кухня.</div>
-            <div class="right-col"><img src="img/Image1.jpg" width="80%"><img></div>
+            <div class="right-col"><img src="img/Image1.jpg" height="80%"><img></div>
+        </div>
+        <div class="main-menu"></div>
+        <div class="main-table">
+            <div class="h1-text right-col">Семейный номер</div>
+            <div class="left-col"><img src="img/Image2.jpg" height="90%"><img></div>
+            <div class="right-col content-text">Семейный номер — большой просторный номер в котором могут комфортно расположиться двенадцать человек. Номер площадью 150 м. кв. включает в себя большой зал отдыха который поделен на две зоны, в каждой зоне есть телевизор, одна зона предназначена для застолья, вторая зона караоке. Моечное отделение с двумя душевыми, парная рассчитанная на 12 человек, контрастный бассейн размерами 3*3 метра.</div>
         </div>
         <div class="footer">
             <p style="text-align:center;">Все права защищены и всё такое</p>
