--- a/index.html
+++ b/index.html
@@ -9,17 +9,19 @@
             <img src="img/testImage.jpg" width="100%"></img>
             
         </div>
-        <div class="main-menu">
-            <span class="menu-item">Общественная баня</span>
-            <span class="menu-item">Семейный номер</span>
-            <span class="menu-item">Меню</span>
-            <span class="menu-item">Цены</span>
-            <span class="menu-item">Режим работы</span>
-            <span class="menu-item">Правила посещения</span>
-            <span class="menu-item">Контакты</span>
-            <span class="menu-item">Вакансии</span>
-            <span class="menu-item">Франшиза</span>
-        </div>
+        <nav class="main-menu">
+            <ul class="menu-list">
+                <li class="menu-item">Общественная баня</li>
+                <li class="menu-item">Семейный номер</li>
+                <li class="menu-item">Меню</li>
+                <li class="menu-item">Цены</li>
+                <li class="menu-item">Режим работы</li>
+                <li class="menu-item">Правила посещения</li>
+                <li class="menu-item">Контакты</li>
+                <li class="menu-item">Вакансии</li>
+                <li class="menu-item">Франшиза</li>
+            </ul>
+        </nav>
         <div class="main-table">
             <div class="top-row h1-text">Общественная баня</div>
             <div class="left-col content-text">Общее отделение банного комплекса Берлога рассчитано на одновременное посещение пятидесяти человек. Каждому клиенту предоставляется отдельный шкафчик с электронным замком, номер на шкафчике соответствует посадочному месту. В моечном отделении находится бассейн размерами 3*6 метра температура воды 28 градусов. Русская парная рассчитанная на 20 человек. Турецкий хамам в котором могут комфортно расположиться 10 человек. Для любителей экстрима есть купель с температурой воды 12 градусов. Для клиентов бани работает кухня.</div>
