add gallery (test)

--- a/index.html
+++ b/index.html
@@ -25,7 +25,15 @@
         <div class="main-table">
             <div class="top-row h1-text">Общественная баня</div>
             <div class="left-col content-text">Общее отделение банного комплекса Берлога рассчитано на одновременное посещение пятидесяти человек. Каждому клиенту предоставляется отдельный шкафчик с электронным замком, номер на шкафчике соответствует посадочному месту. В моечном отделении находится бассейн размерами 3*6 метра температура воды 28 градусов. Русская парная рассчитанная на 20 человек. Турецкий хамам в котором могут комфортно расположиться 10 человек. Для любителей экстрима есть купель с температурой воды 12 градусов. Для клиентов бани работает кухня.</div>
-            <div class="right-col"><img src="img/Image1.jpg" height="80%"><img></div>
+            <div class="gallery">
+                <img src="img/banya/Image3.jpg" alt="" />
+                <img src="img/banya/Image2.jpg" alt="" />
+                <img src="img/banya/Image1.jpg" alt="" />
+                <img src="img/banya/Image4.jpg" alt="" />
+                <img src="img/banya/Image5.jpg" alt="" />
+                <img src="img/banya/Image7.jpg" alt="" />
+                <img src="img/banya/Image6.jpg" alt="" />
+            </div>
         </div>
         <div class="main-menu"></div>
         <div class="main-table">
