--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
             </div>
         </div>
         <div class="main-menu"></div>
-        <div class="main-table">
+        <!-- <div class="main-table">
             <div class="h1-text right-col">Семейный номер</div>
             <div class="left-col"><img src="img/Image2.jpg" height="90%"><img></div>
             <div class="right-col content-text">Семейный номер — большой просторный номер в котором могут комфортно расположиться двенадцать человек. Номер площадью 150 м. кв. включает в себя большой зал отдыха который поделен на две зоны, в каждой зоне есть телевизор, одна зона предназначена для застолья, вторая зона караоке. Моечное отделение с двумя душевыми, парная рассчитанная на 12 человек, контрастный бассейн размерами 3*3 метра.</div>
-        </div>
+        </div> -->
         <div class="footer">
             <p style="text-align:center;">Все права защищены и всё такое</p>
         </div>
