table to mobile

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="main-table">
             <div class="top-row h1-text">Общественная баня</div>
             <div class="left-col content-text">Общее отделение банного комплекса Берлога рассчитано на одновременное посещение пятидесяти человек. Каждому клиенту предоставляется отдельный шкафчик с электронным замком, номер на шкафчике соответствует посадочному месту. В моечном отделении находится бассейн размерами 3*6 метра температура воды 28 градусов. Русская парная рассчитанная на 20 человек. Турецкий хамам в котором могут комфортно расположиться 10 человек. Для любителей экстрима есть купель с температурой воды 12 градусов. Для клиентов бани работает кухня.</div>
-            <div class="gallery">
+            <div class="gallery right-col">
                 <img src="img/banya/Image3.jpg" alt="" />
                 <img src="img/banya/Image2.jpg" alt="" />
                 <img src="img/banya/Image1.jpg" alt="" />
