add icon menu for mobile

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
             <img src="img/testImage.jpg" width="100%"></img>
             
         </div>
-        <nav class="main-menu">
+        <img src="img/mobile_menu.png" class="mobile-menu" onclick="mobileMenu()" id="mobile_menu"><img>
+        <nav class="main-menu" id="main_menu">
             <ul class="menu-list">
                 <li class="menu-item">Общественная баня</li>
                 <li class="menu-item">Семейный номер</li>
