--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 <li class="menu-item">Вакансии</li>
                 <li class="menu-item">Франшиза</li>
             </ul>
+            <img src="img/photo.png" class="cancel-icon">
         </nav>
         <div class="main-table">
             <div class="top-row h1-text">Общественная баня</div>
