--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                 <li class="menu-item">Контакты</li>
                 <li class="menu-item">Вакансии</li>
                 <li class="menu-item">Франшиза</li>
+                <img src="img/photo.png" class="cancel-icon" onclick="cancelIconClick()">
             </ul>
-            <img src="img/photo.png" class="cancel-icon">
         </nav>
         <div class="main-table">
             <div class="top-row h1-text">Общественная баня</div>
