--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li class="menu-item">Контакты</li>
                 <li class="menu-item">Вакансии</li>
                 <li class="menu-item">Франшиза</li>
-                <img src="img/photo.png" class="cancel-icon" onclick="cancelIconClick()">
+                <img src="img/cancelIcon.png" class="cancel-icon" onclick="cancelIconClick()">
             </ul>
         </nav>
         <div class="main-table">
