--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <body>
         <!-- header -->
         <div class="header">
-            <img class="header-logo" src="images/berloga_logo.png"></img>
+            <span><img class="berloga-logo" src="images/berloga_logo.png"></img></span>
+            <span><a href="https://t.me/ErchimBerloga"><img class="telegram-logo" src="images/telegram_logo.png"></img></a></span>
         </div>
         <!-- ------- -->
         <!-- Главный экран -->
