add address and telephone info

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
         <!-- Главный экран -->
         <div class="main">
             <img src="images/background.jpg" width="100%"></img>
+            <div class="main-text">
+                <p>Берлога</p>
+                <p class="main-address">г.Новосибирск, Трикотажный 5-й переулок 23</p>
+                <p class="main-telephone">тел.:292-07-09</p>
+            </div>
         </div>
         <!-- ------------- -->
         <!-- Главное меню -->
