--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <!-- ------- -->
         <!-- Главный экран -->
         <div class="main">
-            <img src="images/background.jpg" width="100%"></img>
+            <img class="main-background" src="images/background.jpg"></img>
             <div class="main-text">
                 <p>Берлога</p>
                 <p class="main-address">г.Новосибирск, Трикотажный 5-й переулок 23</p>
