--- a/index.html
+++ b/index.html
@@ -35,5 +35,30 @@
             </ul>
         </nav>
         <!-- ------------- -->
+        <!-- Content -->
+        <fieldset style="margin-top: 10px;">
+        <legend class="zagolovok">Общественная баня</legend>
+            <div class="col">
+                <div class="col-item">
+                    <ul>
+                        <li>Одновременно посещение до <b>50</b>-ти человек</li>
+                        <li>Бассейн размерами <b>3х6</b> метра</li>
+                        <li>Русская парная вмещает до <b>20</b>-ти человек</li>
+                        <li>Турецкий хамам до <b>10</b>-ти человек</li>
+                        <li>Купель с температурой <b>12</b> градусов</li>
+                        <li>Работает кухня</li>
+                    </ul>
+                </div>
+                <div class="col-item" style="margin-left: 20px;">
+                    <img src="images/banya/Image1.jpg" width="100%" onload="gallery(13,'images/banya/Image')" id="gallery"></img>
+                </div>
+            </div>
+        </fieldset>
+        <!-- ------- -->
+        <!-- footer -->
+        <div class="footer">
+
+        </div>
+        <!-- ------ -->
     </body>
 </html>
