--- a/index.html
+++ b/index.html
@@ -36,24 +36,31 @@
         </nav>
         <!-- ------------- -->
         <!-- Content -->
+
+        <!-- Общественная баня и семейный номер -->
+        <div>
+            <img class="gallery" src="images/banya/Image1.jpg" width="100%" onload="gallery(11, 'gallery')" id="gallery"></img>
+        </div>
+        <div class="text-container">
+            <img src="images/banya/test2.png" width="100px"></img>
+            <div class="zagolovok" id="zagolovok">Общественная <br> баня</div>
+            <div class="cursiv-text">Банный комплекс <b>"Берлога"</b> – современная общественная баня, место где можно расслабиться, восстановить свое физическое и психоэмоциональное состояние.</div>
+        </div>
+        <ul class="spisok">
+            <li>Одновременно посещение до <b>50</b>-ти человек</li>
+            <li>Бассейн размерами <b>3х6</b> метра</li>
+            <li>Русская парная вмещает до <b>20</b>-ти человек</li>
+            <li>Турецкий хамам до <b>10</b>-ти человек</li>
+            <li>Купель с температурой <b>12</b> градусов</li>
+            <li>Работает кухня</li>
+        </ul>
+        <!-- ------------------------------- -->
+
+        <!-- Цены -->
         <fieldset style="margin-top: 10px;">
-        <legend class="zagolovok" id="zagolovok">Общественная баня</legend>
-            <div class="col">
-                <div class="col-item">
-                    <ul>
-                        <li>Одновременно посещение до <b>50</b>-ти человек</li>
-                        <li>Бассейн размерами <b>3х6</b> метра</li>
-                        <li>Русская парная вмещает до <b>20</b>-ти человек</li>
-                        <li>Турецкий хамам до <b>10</b>-ти человек</li>
-                        <li>Купель с температурой <b>12</b> градусов</li>
-                        <li>Работает кухня</li>
-                    </ul>
-                </div>
-                <div class="col-item" style="margin-left: 20px;">
-                    <img src="images/banya/Image1.jpg" width="100%" onload="gallery(11, 'gallery')" id="gallery"></img>
-                </div>
-            </div>
+            <legend class="zagolovok">Цены</legend>
         </fieldset>
+        <!-- ---- -->
         <!-- ------- -->
         <!-- footer -->
         <div class="footer">
