--- a/index.html
+++ b/index.html
@@ -46,14 +46,22 @@
             <div class="zagolovok" id="zagolovok">Общественная баня</div>
             <div class="cursiv-text">Банный комплекс <b>"Берлога"</b> – современная общественная баня, место где можно расслабиться, восстановить свое физическое и психоэмоциональное состояние.</div>
         </div>
-        <ul class="spisok">
+        <div class="help-background">
+            <div class="help" style="padding-top: 20px;">Общее отделение банного комплекса Берлога рассчитано на одновременное посещение пятидесяти человек. Каждому клиенту предоставляется отдельный шкафчик с электронным замком, номер на шкафчике соответствует посадочному месту.</div>
+            <div class="help" style="padding-top: 20px;">- Бассейн 3х6 метров с температурой 28 градусов</div>
+            <div class="help">- Русская парная на 20 человек</div>
+            <div class="help">- Турецкий хамам на 10 человек</div>
+            <div class="help">- Купель с температурой воды 12 градусов</div>
+            <div class="help">- Работает кухня</div>
+        </div>
+        <!-- <ul class="spisok">
             <li>Одновременно посещение до <b>50</b>-ти человек</li>
             <li>Бассейн размерами <b>3х6</b> метра</li>
             <li>Русская парная вмещает до <b>20</b>-ти человек</li>
             <li>Турецкий хамам до <b>10</b>-ти человек</li>
             <li>Купель с температурой <b>12</b> градусов</li>
             <li>Работает кухня</li>
-        </ul>
+        </ul> -->
         <!-- ------------------------------- -->
 
         <!-- Цены -->
