--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="cursiv-text">Банный комплекс <b>"Берлога"</b> – современная общественная баня, место где можно расслабиться, восстановить свое физическое и психоэмоциональное состояние.</div>
         </div>
         <div class="help-background">
-            <div class="help" style="padding-top: 20px;">Общее отделение банного комплекса Берлога рассчитано на одновременное посещение пятидесяти человек. Каждому клиенту предоставляется отдельный шкафчик с электронным замком, номер на шкафчике соответствует посадочному месту.</div>
+            <div class="help" style="padding-top: 20px;" id="helpText">Общее отделение банного комплекса Берлога рассчитано на одновременное посещение пятидесяти человек. Каждому клиенту предоставляется отдельный шкафчик с электронным замком, номер на шкафчике соответствует посадочному месту.</div>
             <div class="help" style="padding-top: 20px;">- Бассейн 3х6 метров с температурой 28 градусов</div>
             <div class="help">- Русская парная на 20 человек</div>
             <div class="help">- Турецкий хамам на 10 человек</div>
