--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <!-- Главное меню -->
         <nav class="main-menu">
             <ul class="menu-list">
-                <li class="menu-item" onclick="banya()" id="banyaItem">Общественная баня</li>
+                <li class="menu-item" onclick="banya()" id="banyaItem" style="color:#D2B48C">Общественная баня</li>
                 <li class="menu-item" onclick="familyNumber()" id="familyItem">Семейный номер</li>
                 <li class="menu-item">Меню</li>
                 <li class="menu-item">Цены</li>
@@ -48,11 +48,11 @@
         </div>
         <div class="help-background">
             <div class="help" style="padding-top: 20px;" id="helpText">Общее отделение банного комплекса Берлога рассчитано на одновременное посещение пятидесяти человек. Каждому клиенту предоставляется отдельный шкафчик с электронным замком, номер на шкафчике соответствует посадочному месту.</div>
-            <div class="help" style="padding-top: 20px;">- Бассейн 3х6 метров с температурой 28 градусов</div>
-            <div class="help">- Русская парная на 20 человек</div>
-            <div class="help">- Турецкий хамам на 10 человек</div>
-            <div class="help">- Купель с температурой воды 12 градусов</div>
-            <div class="help">- Работает кухня</div>
+            <div class="help" style="padding-top: 20px;" id="helpUl1">- Бассейн 3х6 метров с температурой 28 градусов</div>
+            <div class="help" id="helpUl2">- Русская парная на 20 человек</div>
+            <div class="help" id="helpUl3">- Турецкий хамам на 10 человек</div>
+            <div class="help" id="helpUl4">- Купель с температурой воды 12 градусов</div>
+            <div class="help" id="helpUl5">- Работает кухня</div>
         </div>
         <!-- <ul class="spisok">
             <li>Одновременно посещение до <b>50</b>-ти человек</li>
