--- a/index.html
+++ b/index.html
@@ -59,37 +59,39 @@
         <div class="price">
             <div class="price-zag">Цены</div>
             <div class="price-list">
-                <div>
-                    <span class="days">Вторник, среда (2 часа)</span>
-                    <span class="priceRub">400 руб.</span>
-                    <span class="days" style="margin-left: 30px;">Вторник, среда (2 часа)</span>
-                    <span class="priceRub">700 руб.</span>
-                    <div class="time">
-                        <span>c 11:00 до 16:00</span>
-                        <span style="margin-left: 205px;">c 16:00 до 23:00</span>
+                <div class="price-left">
+                    <div>
+                        <span class="days">Вторник, среда</span>
+                        <span class="priceRub">400 руб./2ч</span>
                     </div>
+                    <div class="time">с 11-00 до 16-00</div>
+                    <div>
+                        <span class="days">Четверг, пятница</span>
+                        <span class="priceRub">400 руб./2ч</span>
+                    </div>
+                    <div class="time">с 11-00 до 16-00</div>
+                    <div>
+                        <span class="days">Суббота, воскресенье</span>
+                        <span class="priceRub">800 руб./2ч</span>
+                    </div>
+                    <div class="time">с 11-00 до 16-00</div>
                 </div>
-
-                <div style="margin-top:10px">
-                    <span class="days">Четверг, пятница (2 часа)</span>
-                    <span class="priceRub">400 руб.</span>
-                    <span class="days" style="margin-left: 30px;">Четверг, пятница (2 часа)</span>
-                    <span class="priceRub">800 руб.</span>
-                    <div class="time">
-                        <span>c 11:00 до 16:00</span>
-                        <span style="margin-left: 205px;">c 16:00 до 23:00</span>
+                <div class="price-right">
+                    <div>
+                        <span class="days">Вторник, среда</span>
+                        <span class="priceRub">700 руб./2ч</span>
                     </div>
-                </div>
-
-                <div style="margin-top:10px">
-                    <span class="days">Суббота, воскресенье (2 часа)</span>
-                    <span class="priceRub">800 руб.</span>
-                    <span class="days" style="margin-left: 30px;">Суббота, воскресенье (2 часа)</span>
-                    <span class="priceRub">1000 руб.</span>
-                    <div class="time">
-                        <span>c 11:00 до 16:00</span>
-                        <span style="margin-left: 205px;">c 16:00 до 23:00</span>
+                    <div class="time">с 16-00 до 23-00</div>
+                    <div>
+                        <span class="days">Четверг, пятница</span>
+                        <span class="priceRub">800 руб./2ч</span>
                     </div>
+                    <div class="time">с 16-00 до 23-00</div>
+                    <div>
+                        <span class="days">Суббота, воскресенье</span>
+                        <span class="priceRub">1000 руб./2ч</span>
+                    </div>
+                    <div class="time">с 16-00 до 23-00</div>
                 </div>
             </div>
         </div>
