--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
                         <span class="priceRub">400 руб./2ч</span>
                     </div>
                     <div class="time">с 11-00 до 16-00</div>
-                    <div>
+                    <div class="price-block">
                         <span class="days">Четверг, пятница</span>
                         <span class="priceRub">400 руб./2ч</span>
                     </div>
                     <div class="time">с 11-00 до 16-00</div>
-                    <div>
+                    <div class="price-block">
                         <span class="days">Суббота, воскресенье</span>
                         <span class="priceRub">800 руб./2ч</span>
                     </div>
@@ -82,12 +82,12 @@
                         <span class="priceRub">700 руб./2ч</span>
                     </div>
                     <div class="time">с 16-00 до 23-00</div>
-                    <div>
+                    <div class="price-block">
                         <span class="days">Четверг, пятница</span>
                         <span class="priceRub">800 руб./2ч</span>
                     </div>
                     <div class="time">с 16-00 до 23-00</div>
-                    <div>
+                    <div class="price-block">
                         <span class="days">Суббота, воскресенье</span>
                         <span class="priceRub">1000 руб./2ч</span>
                     </div>
