--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
 
         <!-- Цены -->
-        <div class="price">
+        <div class="price" id="banyaPrice">
             <div class="price-zag">Цены</div>
             <div class="price-list">
                 <div class="price-left">
@@ -94,6 +94,42 @@
                     <div class="time">с 16-00 до 23-00</div>
                 </div>
             </div>
+        </div>
+        <div class="price" id="familyPrice" style="display: none;">
+            <div class="price-zag">Цены</div>
+            <div class="price-list">
+                <div class="price-left">
+                    <div>
+                        <span class="days">Понедельник-четверг</span>
+                        <span class="priceRub">1000 руб./час</span>
+                    </div>
+                    <div class="time">с 09-00 до 18-00</div>
+                    <div class="price-block">
+                        <span class="days">Пятница</span>
+                        <span class="priceRub">1400 руб./час</span>
+                    </div>
+                    <div class="time">с 09-00 до 18-00</div>
+                    <div class="price-block">
+                        <span class="days">Выходные</span>
+                        <span class="priceRub">1800 руб./час</span>
+                    </div>
+                </div>
+                <div class="price-right">
+                    <div>
+                        <span class="days">Понедельник-четверг</span>
+                        <span class="priceRub">1400 руб./час</span>
+                    </div>
+                    <div class="time">с 18-00 до 09-00</div>
+                    <div class="price-block">
+                        <span class="days">Пятница</span>
+                        <span class="priceRub">1800 руб./час</span>
+                    </div>
+                    <div class="time">с 18-00</div>
+                </div>
+            </div>
+        </div>
+        <div class="price" id="discounts" style="display: none;">
+            <div class="price-zag">Акции</div>
         </div>
         <!-- ---- -->
         <!-- ------- -->
