--- a/index.html
+++ b/index.html
@@ -128,8 +128,18 @@
                 </div>
             </div>
         </div>
-        <div class="price" id="discounts" style="display: none;">
+        <div class="price" id="priceDop" style="display: block; height: 100px;">
+            <div class="dop">- ЦЕНЫ ДЛЯ КОМПАНИИ ДО 10 ЧЕЛОВЕК, СВЫШЕ 10 ЧЕЛОВЕК — 200 РУБ. ЗА 1 ЧАС С ЧЕЛОВЕКА</div>
+            <div class="dop">- МИНИМАЛЬНЫЙ ЗАКАЗ — 2 ЧАСА</div>
+        </div>
+        <div class="price" id="discounts" style="display: block;">
             <div class="price-zag">Акции</div>
+            <div class="price-list">
+                <div class="price-left">
+                    <span class="days">При заказе 4-х часов + 1 час в подарок</span>
+                    <span><img src="images/family/Present.png" class="present"></img></span>
+                </div>
+            </div>
         </div>
         <!-- ---- -->
         <!-- ------- -->
