--- a/index.html
+++ b/index.html
@@ -56,88 +56,90 @@
         </div>
 
         <!-- Цены -->
-        <div class="price" id="banyaPrice">
-            <div class="price-zag">Цены</div>
-            <div class="price-list">
-                <div class="price-left">
-                    <div>
-                        <span class="days">Вторник, среда</span>
-                        <span class="priceRub">400 руб./2ч</span>
+        <div style="background-color: 121820;">
+            <div class="price" id="banyaPrice">
+                <div class="price-zag">Цены</div>
+                <div class="price-list">
+                    <div class="price-left">
+                        <div>
+                            <span class="days">Вторник, среда</span>
+                            <span class="priceRub">400 руб./2ч</span>
+                        </div>
+                        <div class="time">с 11-00 до 16-00</div>
+                        <div class="price-block">
+                            <span class="days">Четверг, пятница</span>
+                            <span class="priceRub">400 руб./2ч</span>
+                        </div>
+                        <div class="time">с 11-00 до 16-00</div>
+                        <div class="price-block">
+                            <span class="days">Суббота, воскресенье</span>
+                            <span class="priceRub">800 руб./2ч</span>
+                        </div>
+                        <div class="time">с 11-00 до 16-00</div>
                     </div>
-                    <div class="time">с 11-00 до 16-00</div>
-                    <div class="price-block">
-                        <span class="days">Четверг, пятница</span>
-                        <span class="priceRub">400 руб./2ч</span>
+                    <div class="price-right">
+                        <div>
+                            <span class="days">Вторник, среда</span>
+                            <span class="priceRub">700 руб./2ч</span>
+                        </div>
+                        <div class="time">с 16-00 до 23-00</div>
+                        <div class="price-block">
+                            <span class="days">Четверг, пятница</span>
+                            <span class="priceRub">800 руб./2ч</span>
+                        </div>
+                        <div class="time">с 16-00 до 23-00</div>
+                        <div class="price-block">
+                            <span class="days">Суббота, воскресенье</span>
+                            <span class="priceRub">1000 руб./2ч</span>
+                        </div>
+                        <div class="time">с 16-00 до 23-00</div>
                     </div>
-                    <div class="time">с 11-00 до 16-00</div>
-                    <div class="price-block">
-                        <span class="days">Суббота, воскресенье</span>
-                        <span class="priceRub">800 руб./2ч</span>
-                    </div>
-                    <div class="time">с 11-00 до 16-00</div>
-                </div>
-                <div class="price-right">
-                    <div>
-                        <span class="days">Вторник, среда</span>
-                        <span class="priceRub">700 руб./2ч</span>
-                    </div>
-                    <div class="time">с 16-00 до 23-00</div>
-                    <div class="price-block">
-                        <span class="days">Четверг, пятница</span>
-                        <span class="priceRub">800 руб./2ч</span>
-                    </div>
-                    <div class="time">с 16-00 до 23-00</div>
-                    <div class="price-block">
-                        <span class="days">Суббота, воскресенье</span>
-                        <span class="priceRub">1000 руб./2ч</span>
-                    </div>
-                    <div class="time">с 16-00 до 23-00</div>
                 </div>
             </div>
-        </div>
-        <div class="price" id="familyPrice" style="display: none;">
-            <div class="price-zag">Цены</div>
-            <div class="price-list">
-                <div class="price-left">
-                    <div>
-                        <span class="days">Понедельник-четверг</span>
-                        <span class="priceRub">1000 руб./час</span>
+            <div class="price" id="familyPrice" style="display: none;">
+                <div class="price-zag">Цены</div>
+                <div class="price-list">
+                    <div class="price-left">
+                        <div>
+                            <span class="days">Понедельник-четверг</span>
+                            <span class="priceRub">1000 руб./час</span>
+                        </div>
+                        <div class="time">с 09-00 до 18-00</div>
+                        <div class="price-block">
+                            <span class="days">Пятница</span>
+                            <span class="priceRub">1400 руб./час</span>
+                        </div>
+                        <div class="time">с 09-00 до 18-00</div>
+                        <div class="price-block">
+                            <span class="days">Выходные</span>
+                            <span class="priceRub">1800 руб./час</span>
+                        </div>
                     </div>
-                    <div class="time">с 09-00 до 18-00</div>
-                    <div class="price-block">
-                        <span class="days">Пятница</span>
-                        <span class="priceRub">1400 руб./час</span>
+                    <div class="price-right">
+                        <div>
+                            <span class="days">Понедельник-четверг</span>
+                            <span class="priceRub">1400 руб./час</span>
+                        </div>
+                        <div class="time">с 18-00 до 09-00</div>
+                        <div class="price-block">
+                            <span class="days">Пятница</span>
+                            <span class="priceRub">1800 руб./час</span>
+                        </div>
+                        <div class="time">с 18-00</div>
                     </div>
-                    <div class="time">с 09-00 до 18-00</div>
-                    <div class="price-block">
-                        <span class="days">Выходные</span>
-                        <span class="priceRub">1800 руб./час</span>
-                    </div>
-                </div>
-                <div class="price-right">
-                    <div>
-                        <span class="days">Понедельник-четверг</span>
-                        <span class="priceRub">1400 руб./час</span>
-                    </div>
-                    <div class="time">с 18-00 до 09-00</div>
-                    <div class="price-block">
-                        <span class="days">Пятница</span>
-                        <span class="priceRub">1800 руб./час</span>
-                    </div>
-                    <div class="time">с 18-00</div>
                 </div>
             </div>
-        </div>
-        <div class="price" id="priceDop" style="display: block; height: 100px;">
-            <div class="dop">- ЦЕНЫ ДЛЯ КОМПАНИИ ДО 10 ЧЕЛОВЕК, СВЫШЕ 10 ЧЕЛОВЕК — 200 РУБ. ЗА 1 ЧАС С ЧЕЛОВЕКА</div>
-            <div class="dop">- МИНИМАЛЬНЫЙ ЗАКАЗ — 2 ЧАСА</div>
-        </div>
-        <div class="price" id="discounts" style="display: block;">
-            <div class="price-zag">Акции</div>
-            <div class="price-list">
-                <div class="price-left">
-                    <span class="days">При заказе 4-х часов + 1 час в подарок</span>
-                    <span><img src="images/family/Present.png" class="present"></img></span>
+            <div class="price" id="priceDop" style="display: block; height: 70px;">
+                <div class="dop">- ЦЕНЫ ДЛЯ КОМПАНИИ ДО 10 ЧЕЛОВЕК, СВЫШЕ 10 ЧЕЛОВЕК — 200 РУБ. ЗА 1 ЧАС С ЧЕЛОВЕКА</div>
+                <div class="dop">- МИНИМАЛЬНЫЙ ЗАКАЗ — 2 ЧАСА</div>
+            </div>
+            <div class="price" id="discounts" style="display: block;">
+                <div class="price-zag">Акции</div>
+                <div class="price-list">
+                    <div class="price-left">
+                        <span class="days">При заказе 4-х часов + 1 час в подарок</span>
+                        <span><img src="images/family/Present.png" class="present"></img></span>
+                    </div>
                 </div>
             </div>
         </div>
