--- a/index.html
+++ b/index.html
@@ -137,7 +137,11 @@
                 <div class="price-zag">Акции</div>
                 <div class="price-list">
                     <div class="price-left">
-                        <span class="days">При заказе 4-х часов + 1 час в подарок</span>
+                        <span class="akcii">При заказе 4-х часов + 1 час в подарок</span>
+                        <span><img src="images/family/Present.png" class="present"></img></span>
+                    </div>
+                    <div class="price-right">
+                        <span class="akcii">Скидка 10% в честь дня рождения</span>
                         <span><img src="images/family/Present.png" class="present"></img></span>
                     </div>
                 </div>
