--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                     </div>
                     <div class="price-right">
                         <span class="akcii">Скидка 10% в честь дня рождения</span>
-                        <span><img src="images/family/Present.png" class="present"></img></span>
+                        <span style="vertical-align: middle;"><img src="images/family/dr.png" class="present"></img></span>
                     </div>
                 </div>
             </div>
